Changes to Version 3.0-7

  o Fix Anova() to work with "lme" models without an intercept (to fix bug reported by Benjamin Tyner).

Changes to Version 3.0-6

  o Explicitly import utils::globalVariables() (suggestion of Vince Carey).

Changes to Version 3.0-5

  o Change class(x) == "y" to inherits(x, "y") throughout code (thanks to Martin Maechler).

Changes to Version 3.0-4

  o Scoping improvements to deltaMethod(), which now also takes an optional hypothesized value; contribution and suggestion by Pavel Krivitsky.
  
  o Make Anova() work for coxph() models with strata (following problem reported by Susan Galloway Hilsenbeck).
  
  o Modify carPalette() to provide a colorblind-friendly palette as an option (suggestion of Sercan Kahveci).
  
  o Small improvements.

Changes to Version 3.0-3

  o Fixed a bug in mmp.glm, so the horizontal axis for the default plot is the linear predictor, not the fitted values.  

  o Fixed a bug in estimatePower.bncPowerlmer when the shift parameter is too close to the lower bound, thanks to Wouter van der Bijl <wouter@zoology.ubc.ca>
  
  o Fixed a bug in brief.lm the caused an error with rank-deficient models.
  
  o Fixed a bug in deltaMethod() when a variable in the model is named "g" (reported by Chris Andrews.)
  
  o Added a title argument to mcPlots
  
  o influence.merMod() and influence.lme() now support parallel computations.

  o Fix a bug in gamLine() to return values in the response scale, rather than the linear predictor scale, for glms.
  
  o Fixed a bug that caused the error argument to be ignored in Anova() for type-III tests in linear models (reported by Austin Hurst).
  
  o New lmerMod method for influencePlot(), infIndexPlot(), and outlierTest().
  
  o Made scatterplot.formula() more robust.
  
  o Fixed qqPlot() to respect order of factor levels when plotting by groups (suggestion of Vilmantas Gegzna).
  
  o Fixed bug in S.multinom() that exponentiated coefficients twice (reported by Thamron Keowmani).
  