@@ -3,11 +3,11 @@
     title = {boot: Bootstrap {R} ({S}-{P}lus) Functions. {R} package version 1.3-9},
     year = {2013}
 }
-@BOOK{FoxWeisberg11,
+@BOOK{FoxWeisberg19,
   author = {J. Fox and S. Weisberg},
-  year = 2011,
+  year = 2019,
   title = {An {R} Companion to Applied Regression},
-  edition={2nd},
+  edition={3rd},
   publisher = {Sage},
   address = {Thousand Oaks {CA}},
   url={http://z.umn.edu/carbook}
